<resources>
    <string name="app_name">JobForCharity</string>
    <string name="hint_e_mail">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="or">OR</string>
    <string name="sign_up"><u>New here? Sign up</u></string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="terms_conditions">I agree with the <u><b>Terms and Conditions.</b></u></string>
    <string name="title_sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="mobile_numbers">Mobile Numbers</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="categories">Categories</string>
    <string name="what_s_news">What\'s News</string>
    <string name="job">Job:</string>
    <string name="description">Description:</string>
    <string name="rent">Rent</string>
    <string name="jobs">Jobs:</string>
    <string name="work_in_progress">Work in progress</string>
    <string name="history">History</string>
    <string name="details">Details</string>
    <string name="reviews">Reviews</string>

    <string name="expiration_date">Expiration date:</string>


    <!--Activity Create Job resources-->
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="your_comment">Your comment...</string>
    <string name="ok">OK</string>
    <string name="review">Review</string>
    <string name="job_detail">Job details</string>
    <string name="Dialog_content_rent_warning">Your job will be added in \"Work in progress\".</string>
    <string name="Dialog_content_rent_success">Go to \"Work in progress\" to view your job.</string>
    <string name="Dialog_content_cancel_warning">Your job will be removed from your list.</string>
    <string name="Dialog_content_done_warning">Thank you for donate to our charity fund.</string>
    <string name="Dialog_title_warning">Are you sure?</string>
    <string name="Dialog_title_rent_success">Your job has been added!</string>
    <string name="Dialog_title_cancel_success">Your job has been remove</string>
    <string name="thank_you">Thank you!</string>
    <string name="send">Send</string>

    <!--Activity Create Job resources-->
    <string name="job_detail_label">Detail</string>
    <string name="job_name_label">Job Name</string>
    <string name="begin_date_label">Begin date</string>
    <string name="begin_time_label">Begin time</string>
    <string name="job_list_label">End time</string>
    <string name="create_label">Post</string>


    <!--Worker strings-->
    <string name="all_work_label">ALL WORKS</string>
    <string name="future_work_label">FUTURE WORKS</string>
    <string name="history_work_label">HISTORY</string>
    <string name="progressing_work_label">PROGRESSING WORKS</string>

</resources>
