<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="@dimen/dp20">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp10">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgProfileReview"
            android:layout_width="@dimen/dp100"
            android:layout_height="@dimen/dp100"
            tool:src="@drawable/test"
            android:layout_gravity="center"
            app:civ_border_width="1dp"
            app:civ_border_color="#000000"/>
        <TextView
            android:id="@+id/txtNameReview"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/dp20"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dp5"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RatingBar
            android:id="@+id/rateBarReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:numStars="5"
            tool:rating="4.5"
            android:theme="@style/RatingBar"/>
        <EditText
            android:id="@+id/edCommentReviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:background="@drawable/border_edittext"
            android:inputType="textMultiLine"
            android:layout_gravity="center"
            android:padding="@dimen/dp5"
            android:scrollbars="vertical"
            android:hint="@string/your_comment"
            android:lines="4"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end">
            <Button
                android:id="@+id/btnReviewCacel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/cancel"
                android:background="@android:color/transparent"/>
            <Button
                android:id="@+id/btnReviewSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/send"
                android:background="@android:color/transparent"/>
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>