<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:ls="http://schemas.android.com/apk/res-auto"

              android:orientation="vertical"
              android:weightSum="1">

    <android.support.v7.widget.Toolbar

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryWorker">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp15"
        android:layout_marginRight="@dimen/dp15"
        android:orientation="vertical"

        android:paddingTop="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Categories"
                android:textColor="@color/colorPrimaryWorker"
                />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinnerCategories"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/dp15"
                android:paddingTop="@dimen/dp15"
                />
        </LinearLayout>


        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/InputTextLabel"
            >

            <EditText

                android:id="@+id/txtInputJobName"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/job_name_label"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtInputJobDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/InputTextLabel"
            >


            <EditText
                android:id="@+id/txtJobDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/job_detail_label"

                android:inputType="textMultiLine"
                android:lines="3"/>

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/dp15"
        android:layout_marginRight="@dimen/dp15"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:theme="@style/InputTextLabel">

            <EditText
                android:id="@+id/txtInputDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:hint="Date"
                />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"

                    android:theme="@style/InputTextLabel"
                    >

                    <EditText
                        android:id="@+id/txtInputBeginTime"
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        android:hint="Begin Time"


                        />


                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:theme="@style/InputTextLabel"
                    >

                    <EditText
                        android:id="@+id/txtInputEndTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        android:hint="End Time"


                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:theme="@style/InputTextLabel"
                    >

                    <EditText

                        android:id="@+id/txtInputSalary"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Salary"
                        />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp10"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="Date Time list"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:textColor="@color/colorPrimaryWorker"
            />
        <ImageButton

        android:id="@+id/btnAddDateTime"
        android:layout_width="0dp"
        android:layout_weight="2"

        android:layout_height="match_parent"


        android:background="@android:color/transparent"
        android:src="@drawable/ic_add_green_24dp"/>
        <ImageButton

            android:id="@+id/btnDeleteDateTime"
            android:layout_width="0dp"
            android:layout_weight="2"

            android:layout_height="match_parent"


            android:background="@android:color/transparent"
            android:src="@drawable/ic_delete_24dp"/>



            <!--android:background="@android:color/transparent"-->

    </LinearLayout>



    <ListView
        android:id="@+id/lvDatetime"
        android:background="@drawable/linear_border"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="@dimen/dp10"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0.85"/>

    <Button
        android:id="@+id/btnPostJob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dp10"

        android:layout_weight="0.05"
        android:background="@color/colorPrimaryWorker"

        android:text="@string/create_label"
        android:textColor="@android:color/white"/>


</LinearLayout>